<resources>
    <string name="app_name">Astral</string>

    <string name="default_notification_channel_id">com.goroscop.astral.chanel</string>
    <string name="astral">Astral</string>
    <string name="personal_horoscop">Персональный гороскоп</string>
    <string name="dialog_title">Персональный\nгороскоп</string>
    <string name="dialog_btn">Далее</string>
    <string name="hint_email">EMAIL</string>
    <string name="hint_pass">ПАРОЛЬ</string>
    <string name="txt_login">Войти</string>
    <string name="txt_create_account">или\n<u>создать аккаунт</u></string>
    <string name="error_empty_mail">Email не заполнен</string>
    <string name="error_email_invalid">Email указан не корректно</string>
    <string name="error_pass_empty">Пароль не заполнен</string>
    <string name="error_pass_invalid">Длина пароля менее 6 символов</string>
    <string name="title_registration">Регистрация</string>
    <string name="btn_next">Продолжить</string>
    <string name="question_name">Как вас зовут?</string>
    <string name="content_name">Для составления персонального гороскопа, астрологам очень важно знать Ваше имя</string>
    <string name="hint_mane">ВВЕДИТЕ ИМЯ</string>
    <string name="question_birthday">Ваша дата рождения</string>
    <string name="content_birthday">Благодаря Вашей дате рождения, мы без проблем сможем определить Ваш знак зодиака и символ года</string>
    <string name="question_gender">Выберите свой пол</string>
    <string name="content_gender">Мы сможем рассчитать совместимость со знаком Вашего партнера</string>
    <string name="hint_birthday">ВВЕДИТЕ ДАТУ РОЖДЕНИЯ</string>
    <string name="question_city">Укажите свой город</string>
    <string name="content_city">Мы сможем давать рекомендации относительно Вашего месторасположения</string>
    <string name="hint_city">УКАЖИТЕ ГОРОД</string>
    <string name="question_mail_pass">Укажите почту и пароль</string>
    <string name="content_mail_pass">Чтобы защитить свой акаунт укажите пожалуйста почту и пароль</string>

    <string name="nav_home">Моя страница</string>
    <string name="nav_compatibility">Совместимость</string>
    <string name="nav_china">Китайский гороскоп</string>
    <string name="nav_element">Моя стихия</string>
    <string name="nav_metal">Мой металл</string>
    <string name="nav_planet">Моя планета</string>
    <string name="content_compatibility">Выберите свой знак зодиака и знак зодиака Вашего партнера. Узнайте насколько вы совместимы</string>
    <string name="btn_compatibility">Узнать совместимость</string>
    <string name="error_name_empty">Укажите Ваше имя</string>
    <string name="error_city_empty">Укажите Ваш город</string>
    <string name="error_birthday_empty">Укажите дату рождения</string>
    <string name="error_gender_empty">Выберите свой пол</string>
    <string name="error_invalid_mail_pass">Неверный email или пароль</string>
    <string name="error_email_exist">Пользователь с таким email уже существует!</string>
    <string name="txt_love">Любовь</string>
    <string name="txt_career">Карьера</string>
    <string name="txt_health">Здоровье</string>
    <string name="lucky_num">Счастливые номера</string>
    <string name="txt_pay">Купить</string>
    <string name="cancel">Отмена</string>
    <string name="element_compatibility">Совместимость с другими стихиями</string>
    <string name="success_day">Успешность дня</string>
    <string name="choose_sign">Выберите знак</string>
    <string name="btn_pay">Оплатить</string>
    <string name="you_sign">Ваш знак</string>
    <string name="partner_sign">знак партнера</string>
    <string name="to_home">На главную</string>
    <string name="you_compatibility">Ваша совместимость</string>
    <string name="detail">Подробнее</string>
    <string name="nav_about">О приложении</string>
    <string name="nav_exit">Выход</string>
    <string name="about_title">Astral - персональный гороскоп</string>
    <string name="about_content">Подробный персональный гороскоп на каждый день, месяц, неделю и год.\n\n
        Ежедневный гороскоп для знака поможет вам узнать, что приготовили вам звезды.
        Каждый день нас ждут какие-то испытания. Астрологический прогноз составлен на основе положения Луны и Солнца на текущий день.
        Благодаря нашему гороскопу, вы сможете быть готовыми ко всем сюрпиризам, которые готовит вам судьба.\n\n
        Пробный бесплатный период 2 дня. Дальнейшая оплата осуществляется согласно лицензионному договору.
        Условия использования и больше другой информации на сайте приложения.</string>
    <string name="document">Документация</string>
    <string name="license">Лицензионное соглашение</string>
    <string name="site">Открыть сайт</string>
    <string name="support">Написать поддержке</string>
    <string name="dialog_content">У ВАС ОГРАНИЧЕН ДОСТУП\nПопробуйте бесплатно все функции приложения</string>
    <string name="btn_trial">Активировать триал</string>
    <string name="cb_text">Даю согласие на <a href="https://7astral.ru/soglas.pdf">обработку персональных данных</a>.
        Ознакомлен и согласен с <a href="https://7astral.ru/oferta.pdf">лицензионным договором</a>, в том числе с условиями оплаты.
        Подтверждаю согласие с <a href="https://7astral.ru/policy.pdf">политикой обработки персональных данных</a>.</string>
    <string name="buy_1">Купить за 1 рубль</string>
    <string name="btn_cancel_subscription">Отменить подписку</string>
</resources>
