<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginActivity"
    android:background="@drawable/background">

    <LinearLayout
        android:id="@+id/layout_astral"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_astral"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/astral"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="76sp"
            android:fontFamily="@font/poppins_bold"
            />

        <TextView
            android:id="@+id/txt_astral_ru"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/personal_horoscop"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:fontFamily="@font/poppins_regular"
            android:textColor="@android:color/white"
            android:textSize="21sp"/>
    </LinearLayout>

    <EditText
        android:id="@+id/edt_mail"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:gravity="center"
        android:hint="@string/hint_email"
        android:fontFamily="@font/poppins_regular"
        android:inputType="textEmailAddress"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:backgroundTint="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/edt_pass"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:hint="@string/hint_pass"
        android:inputType="textPassword"
        android:fontFamily="@font/poppins_regular"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:backgroundTint="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/edt_mail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_button"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:text="@string/txt_login"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintTop_toBottomOf="@id/edt_pass"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/txt_registration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:text="@string/txt_create_account"
        android:fontFamily="@font/poppins_regular"
        app:layout_constraintTop_toBottomOf="@id/btn_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>