<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent">

    <TextView
        android:id="@+id/txt_title_city"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:fontFamily="@font/poppins_bold"
        android:textAlignment="center"
        android:text="@string/question_city"
        android:textColor="@android:color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_content_city"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:textSize="14sp"
        android:textAlignment="center"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@android:color/white"
        android:text="@string/content_city"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_title_city" />

    <EditText
        android:id="@+id/edt_birthday"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:hint="@string/hint_city"
        android:inputType="text"
        android:fontFamily="@font/poppins_regular"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:backgroundTint="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/txt_content_city"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>