<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:paddingBottom="40dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/about_title"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorTabLine"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/white"
                android:textSize="14sp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/about_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/document"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:background="@color/colorTabLine"/>

            <LinearLayout
                android:id="@+id/rules_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_file"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:text="@string/license"
                    android:textSize="14sp"
                    android:textColor="@android:color/white"
                    android:fontFamily="@font/poppins_regular"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:alpha="0.5"
                android:background="@color/colorTabLine"/>

            <LinearLayout
                android:id="@+id/rules_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_earth"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:textSize="14sp"
                    android:text="@string/site"
                    android:textColor="@android:color/white"
                    android:fontFamily="@font/poppins_regular"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:alpha="0.5"
                android:background="@color/colorTabLine"/>

            <LinearLayout
                android:id="@+id/rules_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp">
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_support"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:textSize="14sp"
                    android:text="@string/support"
                    android:textColor="@android:color/white"
                    android:fontFamily="@font/poppins_regular"
                    android:layout_gravity="center"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginEnd="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:alpha="0.5"
                android:background="@color/colorTabLine"/>
        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>