<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:attrs="http://schemas.android.com/tools"
    android:paddingBottom="30dp"
    android:background="@color/colorDialog">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@android:color/white"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="25sp"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:text="@string/dialog_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/preview_pager"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_title"
        app:layout_constraintBottom_toTopOf="@id/txt_rules"
        />

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:visibility="visible"
        app:buttonTint="@android:color/white"
        app:layout_constraintBottom_toTopOf="@id/btn_next"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txt_rules" />

    <TextView
        android:id="@+id/txt_rules"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cb_text"
        android:textSize="12sp"
        android:visibility="visible"
        android:textColorLink="@android:color/holo_blue_bright"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@android:color/white"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintStart_toEndOf="@id/checkbox"
        app:layout_constraintBottom_toTopOf="@id/btn_next"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="30dp"
        android:textColor="@android:color/white"
        android:textAllCaps="true"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/dialog_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/bg_button"
        app:layout_constraintBottom_toTopOf="@id/pageIndicatorView"/>

    <TextView
        android:id="@+id/txt_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/white"
        android:alpha="0.5"
        android:visibility="gone"
        android:textSize="14sp"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintTop_toBottomOf="@id/btn_next"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.rd.PageIndicatorView
        android:id="@+id/pageIndicatorView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:piv_animationType="fill"
        app:piv_dynamicCount="true"
        app:piv_interactiveAnimation="true"
        app:piv_selectedColor="@color/colorDotsInactive"
        app:piv_unselectedColor="@color/colorDotsInactive"
        app:piv_viewPager="@id/preview_pager"
        android:layout_marginTop="20dp"
        attrs:piv_padding="12dp"
        attrs:piv_radius="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>