<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <TextView
        android:id="@+id/title_compatibility"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/nav_compatibility"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/content_compatibility"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:fontFamily="@font/poppins_regular"
        android:text="@string/content_compatibility"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_compatibility" />

    <View
        android:id="@+id/view_my"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/bg_image"
        app:layout_constraintEnd_toStartOf="@+id/view_you"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/content_compatibility" />

    <View
        android:id="@+id/view_you"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/bg_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/view_my"
        app:layout_constraintTop_toBottomOf="@id/content_compatibility" />

    <ImageView
        android:id="@+id/my_sign"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="@id/view_my"
        app:layout_constraintBottom_toBottomOf="@id/view_my"
        app:layout_constraintStart_toStartOf="@id/view_my"
        app:layout_constraintEnd_toEndOf="@id/view_my"/>

    <ImageView
        android:id="@+id/you_sign"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="@id/view_you"
        app:layout_constraintBottom_toBottomOf="@id/view_you"
        app:layout_constraintStart_toStartOf="@id/view_you"
        app:layout_constraintEnd_toEndOf="@id/view_you"/>

    <Button
        android:id="@+id/btn_next"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/bg_button"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/btn_compatibility"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>